--- a/second-hero.css
+++ b/second-hero.css
@@ -2,7 +2,6 @@
     height: 100%;
     width: 100%;
     padding:80px 70px; 
-    border: 2px solid red;
 }
 .barber-character .barber-content{
     border-bottom: 2px solid gray;
@@ -87,7 +86,7 @@
     border-radius: 25px;
     padding:7px 15px;
 }
-@media  (320px <= width <= 426px) {
+@media  (0px <= width <= 426px) {
     .cards-item{
         display: flex;
         align-items: center;
@@ -96,15 +95,14 @@
     }
     .barber-character {
         text-align: center;
-        height: 170vh;
+        height: 190vh;
         width: 100%;
         padding: 0px 20px;
-        border: 2px solid red;
     }
     .barber-character .barber-cards .cards-item .card-1, .barber-character .barber-cards .cards-item .card-2 {
         transition: all .3s ease-in-out;
         height: 250px;
-        width: 280px;
+        width: 100%;
         border-radius: 35px;
         background: #d6a354;
         position: relative;
@@ -117,6 +115,10 @@
     
 }
 @media  (426px <= width <= 768px) {
+    
+.container, .container-sm {
+    max-width: 100%;
+}
     .cards-item{
         display: flex;
         align-items: center;
@@ -128,16 +130,15 @@
         height: 170vh;
         width: 100%;
         padding: 0px 20px;
-        border: 2px solid red;
     }
     .barber-character .barber-cards .cards-item .card-1, .barber-character .barber-cards .cards-item .card-2 {
         transition: all .3s ease-in-out;
         height: 250px;
-        width: 100%;
+        width: 80%;
         border-radius: 35px;
         background: #d6a354;
         position: relative;
-        margin-top: 50px;
+        margin: 50px;
     }
     .barber-character .barber-cards .cards-item .card-1:hover,.barber-character .barber-cards .cards-item .card-2:hover{
         background: linear-gradient(90deg, #FDBB2D 0%, #22C1C3 100%);
@@ -149,5 +150,11 @@
     .barber-character {
         width: 100%;
         height: 100%;
+    }
+    .cards-item{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
     }
 }
