--- a/bookset.css
+++ b/bookset.css
@@ -45,6 +45,7 @@
         background-color: white;
         height: 100%;
         padding-bottom: 40px;
+        width: 100%;
     }
 }
 @media  (426px <= width <= 768px) {
