--- a/footer.css
+++ b/footer.css
@@ -23,6 +23,9 @@
     z-index: -99;
     height: 250px;
     width: 90%;
+    display: flex;
+    justify-content: center;
+    flex-direction:column;
 }
 .footer-card-item h3,.footer-card-item svg{
     margin: 20px 30px;
