--- a/second-hero.css
+++ b/second-hero.css
@@ -70,6 +70,9 @@
     padding: 7px;
     cursor: pointer;
 }
+.barber-character .barber-cards{
+    width: 100%;
+}
 .barber-character .barber-cards .cards-item .card-1 .card-content,.barber-character .barber-cards .cards-item .card-2 .card-content{
     position: absolute;
     bottom:0;
