--- a/first-hero.css
+++ b/first-hero.css
@@ -188,7 +188,8 @@
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    flex-direction: column;}
+    flex-direction: column;
+}
     .main-content #h1{
         font-size: 60px;
         color: white;
@@ -201,7 +202,7 @@
 }
 .main-content .link-content #link-1,.main-content .link-content #link-2{
     padding:7px 20px;
-    margin-right: 60px;
+    margin-bottom:20px;
 }
 .main-image-content{
     width: 350px;
